--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ nav ul {
     text-decoration: none;
 }
 
-img{
+.logo{
     border-radius: 60%;
     max-height: 150px;
     max-width: 200px;
@@ -63,15 +63,67 @@ ul#Menu li a{
 
 #Event-Details p {
     width: 400px;
-    height: 100px;
+    height: 200px;
     overflow: auto;
 }
 
-h1 { color: wheat;
+h1 { color: #333333;
     font-family: "Great Vibes", cursive;
     font-size: 50px; line-height: 160px;
-    font-weight: normal;
+    font-weight: bold;
     margin-bottom: 5px;
     margin-top: 5px;
     text-align: center;
-    text-shadow: 0 1px 1px #333333; }
+    text-shadow: 0 1px 1px black; }
+
+ul li:hover{
+    background: black;
+    border-radius: 180px;
+    opacity: 70%;
+}
+
+.chef1{
+    position: relative;
+    width: 360px;
+    max-width: 100%;
+}
+
+.chef1 .chef1food{
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    object-fit: contain;
+    opacity: 0;
+    transition: opacity .2s;
+}
+
+.chef1:hover .chef1food{
+opacity: 1;
+}
+
+.chef1 img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+figcaption{
+    background-color: #333333;
+    color: white;
+    margin: 2px;
+    font-family: sans-serif, Arial;
+    font-weight: 500;
+    font-size: 13px;
+    padding: 15px;
+    width: 500px;
+    line-height: 1.7em;
+}
+
+#Guest_Chefs h2{
+    background-color: #333333;
+    padding: 20px;
+    width: 200px;
+    color: white;
+}
